--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "pytest>=8.3.5",
-    "ruff>=0.11.12",
-]
+dependencies = []
 
 [dependency-groups]
-dev = []
+dev = [
+    "ruff>=0.11.12",
+]
 test = [
+    "pytest>=8.3.5",
     "pytest-cov>=6.1.1",
 ]
 
